// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow FlexRow component should render 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-18dncu9-0 bPDLdl"
  >
    Flex Row
  </div>
</DocumentFragment>
`;

exports[`FlexRow FlexRow component should render row-reverse 1`] = `
<DocumentFragment>
  <div
    class="artifak__sc-18dncu9-0 xQXzC"
  >
    Flex Row Reverse
  </div>
</DocumentFragment>
`;
